--- a/sgcm/frontend/src/main/App.css
+++ b/sgcm/frontend/src/main/App.css
@@ -2,9 +2,9 @@
     --bg-dark: #1A2F3A;
 
     --logo-heigth: 100px;
-    --header-height: 100px;
+    --header-heigth: 100px;
     --aside-width: 225px;
-    --footer-height: 40px;
+    --footer-heigth: 40px;
 
     --shadow: 
         0 2px 23px 0 rgba(0, 0, 0, 0.1)
