--- a/sgcm/frontend/src/components/template/Logo.css
+++ b/sgcm/frontend/src/components/template/Logo.css
@@ -1,12 +1,14 @@
 aside.logo {
+    background-color: #e52d27;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 aside.logo img{
-    padding: 0px 1px;
+    margin: 0px;
     width: 100%;
+    height: 100%;
 }
 
 /* @media(max-width: 576px){
