--- a/sgcm/frontend/src/components/template/Logo.css
+++ b/sgcm/frontend/src/components/template/Logo.css
@@ -1,18 +1,12 @@
 aside.logo {
-    background-color: #e52d27;
+    background-color: var(--bg-red);
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 aside.logo img{
-    margin: 0px;
+    margin: 0;
     width: 100%;
     height: 100%;
 }
-
-/* @media(max-width: 576px){
-    aside.logo img {
-        width: 350px;
-    }
-} */
