--- a/sgcm/frontend/src/components/template/Main.css
+++ b/sgcm/frontend/src/components/template/Main.css
@@ -1,8 +1,14 @@
+/* main > div {
+    background-color: #FFF;
+    box-shadow: 0px 0px 15px #0004;
+} */
+
 .menu-main{
     display: flex;
     justify-content: space-between;
     padding: 30px;    
 }
+
 .cadastro{
     display: flex;
     flex-direction: column;
@@ -98,5 +104,3 @@
     font-size: 1.7em;
     font-weight: 500;
 }
-
-
