--- a/sgcm/frontend/src/main/App.css
+++ b/sgcm/frontend/src/main/App.css
@@ -1,14 +1,14 @@
-:root {
+:root{
     --bg-red: red;
 
-    --logo-heigth: 100px;
-    --header-heigth: 100px;
+    --logo-height: 100px;
+    --header-height: 100px;
     --aside-width: 225px;
-    --footer-heigth: 40px;
+    --footer-height: 40px;
 
-    --shadow: 
-        0 2px 23px 0 rgba(0, 0, 0, 0.1)
-        0 2px 49px 0 rgba(0, 0, 0, 0.6);
+    --shadow:
+        0 2px 23px 0 rgba(0, 0, 0, 0.1),
+        0 2px 49px 0 rgba(0, 0, 0, 0.06);
 }
 
 *{
@@ -17,18 +17,19 @@
 }
 
 .app{
-    margin: 0px;
+    margin: 0;
     display: grid;
     grid-template-columns: var(--aside-width) 1fr;
-    grid-template-rows: var(--header-heigth) 1fr var(--footer-heigth);
-    grid-template-areas: "logo header" 
-                         "menu content" 
-                         "menu footer";
+    grid-template-rows: var(--header-height) 1fr var(--footer-height);
+    grid-template-areas: 
+            "logo header"
+            "menu content"
+            "footer footer";
     height: 100vh;
-    background-color: #F5F5F5;
+    background-color:#F5F5F5;
 }
 
-aside.logo {
+aside.logo{
     grid-area: logo;
 }
 
@@ -36,47 +37,14 @@ header.header{
     grid-area: header;
 }
 
-aside.menu-area {
-       grid-area: menu; 
+aside.menu-area{
+    grid-area: menu;
 }
 
 main.content {
     grid-area: content;
 }
 
-footer.footer {
+footer.footer{
     grid-area: footer;
 }
-
-/* @media(max-width: 768px) {
-    .app {
-        grid-template-rows:
-            var(--header-height)
-            var(--menu-top-height)
-            1fr
-            var(--footer-height);
-        grid-template-columns: var(--aside-width) 1fr;
-        grid-template-areas:
-            "logo header"
-            "menu menu"
-            "content content"
-            "footer footer";
-    }
-}
-
-
-@media(max-width: 576px){
-    .app {
-        grid-template-rows: 
-            var(--logo-height)
-            var(--menu-top-height)
-            1fr
-            var(--footer-heigth);
-        grid-template-columns: 1fr;
-        grid-template-areas: 
-            "logo"
-            "menu"
-            "content"
-            "foote";
-    }
-} */
