--- a/sgcm/frontend/src/components/template/Main.css
+++ b/sgcm/frontend/src/components/template/Main.css
@@ -118,9 +118,9 @@
 
 }
 
-.row {
+.rowButton {
     margin: 0;
-    padding: 10px;
+    padding: 0 10px 10px 0;
     display: flex;
     justify-content: flex-end;
 }
@@ -137,5 +137,29 @@
     font-size: 1.2em;
     background-color: red;
     color: white;
+    font-weight: 500;
+}
+.form-group1{
+    margin: 0;
+    padding: 0 10px 0 0;
+    display: flex;
+    align-items: center; 
+    font-size: 1em;  
+}
+.nomeLabel{
+    margin: 0 10px 0 0;
+    font-weight: 500;
+}
+
+.form-control{
+    margin: 0 10px 0 0;
+}
+.sexoLabel{
+    /* margin: 0 10px 0 0; */
+    font-weight: 500;
+}
+
+.sexo{
+    margin: 0 0 0 10px;
     font-weight: 500;
 }
