--- a/sgcm/frontend/src/components/template/Main.css
+++ b/sgcm/frontend/src/components/template/Main.css
@@ -141,7 +141,7 @@
 }
 .form-group1{
     margin: 0;
-    padding: 0 10px 0 0;
+    padding: 0 10px 10px 0;
     display: flex;
     align-items: center; 
     font-size: 1em;  
@@ -162,4 +162,12 @@
 .sexo{
     margin: 0 0 0 10px;
     font-weight: 500;
+}
+
+.form-group2{
+    margin: 0;
+    padding: 0 10px 0 0;
+    display: flex;
+    align-items: center; 
+    font-size: 1em;  
 }
