--- a/sgcm/frontend/src/components/template/Main.css
+++ b/sgcm/frontend/src/components/template/Main.css
@@ -228,12 +228,12 @@
 }
 
 .estadoCivilLabel{
-    margin: 0 10px 0 0;
+    margin: 0 15px 0 0;
     font-weight: 500; 
 }
 
 .estadoCivil{
-    margin: 0 10px 0 0;
+    margin: 0 20px 0 0;
 }
 
 .form-group3{
@@ -282,6 +282,10 @@
     display: flex;
     align-items: center; 
     font-size: 1em;  
+}
+
+.cr{
+    margin: 0 20px 0 0;
 }
 
 .cep{
